# django-google-sso

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  sonar-project.properties
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/workflows/: analysis.yml  publish.yml  stale.yml  tests.yml
.junie/: guidelines.md
.run/: Migrate.run.xml  Run All Tests.run.xml  Run Example App.run.xml  Serve Docs.run.xml
admin/: index.html
advanced/: index.html
callback/: index.html
credentials/: index.html
customize/: index.html
django_google_sso/: admin.py  apps.py  conf.py  helpers.py  hooks.py  main.py  models.py  urls.py  utils.py  views.py
django_google_sso/checks/: warnings.py
django_google_sso/migrations/: 0001_initial.py  0002_alter_googlessouser_picture_url.py
django_google_sso/static/django_google_sso/: google_button.css
django_google_sso/templates/admin_sso/: login.html
django_google_sso/templates/google_sso/: login.html  login_sso.html
django_google_sso/templatetags/: show_form.py  sso_tags.py
django_google_sso/tests/: conftest.py  test_callables.py  test_conf.py  test_google_auth.py  test_models.py  test_pkce.py  test_sites.py  test_tags.py  test_user_helper.py  test_views.py
docs/: admin.md  advanced.md  callback.md  credentials.md  customize.md  how.md  index.md  model.md  multiple.md  pages.md  quick_setup.md  settings.md  sites.md  thanks.md  third_party_admins.md  troubleshooting.md  urls.md  users.md
example_app/: .env  README.md  asgi.py  backend.py  manage.py  settings.py  urls.py  views.py  wsgi.py
example_app/static/django_google_sso/: google_button_custom.css
example_google_app/: .env  .stela  README.md  asgi.py  backend.py  manage.py  settings.py  urls.py  views.py  wsgi.py
example_google_app/static/django_google_sso/: google_button_custom.css  google_button_unfold.css
example_google_app/templates/: login.html  secret_page.html
how/: index.html
model/: index.html
multiple/: index.html
pages/: index.html
quick_setup/: index.html
search/: search_index.json
settings/: index.html
sites/: index.html
thanks/: index.html
third_party_admins/: index.html
troubleshooting/: index.html
urls/: index.html
users/: index.html
