[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "django_google_sso/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["django_google_sso"]

[tool.semantic_release]
version_variables = [
    "django_google_sso/__init__.py:__version__",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"

[project]
name = "django-google-sso"
dynamic = ["version"]
description = "Easily add Google Authentication to your Django Projects"
readme = "README.md"
requires-python = ">=3.11, <4.0"
license = { text = "MIT" }
authors = [{ name = "Chris Maillefaud", email = "chrismaille@users.noreply.github.com" }]
keywords = ["google", "django", "sso"]

classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
]
dependencies = [
    "django>=5.0",
    "loguru",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib"
]

[project.urls]
Homepage = "https://github.com/megalus/django-google-sso"
Repository = "https://github.com/megalus/django-google-sso"
Documentation = "https://megalus.github.io/django-google-sso/"

[dependency-groups]
dev = [
    "arrow",
    "auto-changelog",
    "bandit",
    "click>8",
    "django-admin-interface",
    "django-grappelli",
    "django-jazzmin",
    "django-jet-reboot",
    "django-unfold",
    "faker",
    "httpx",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "pre-commit",
    "pytest-asyncio",
    "pytest-coverage",
    "pytest-django",
    "pytest-mock",
    "python-dotenv",
    "ruff",
    "stela",
]

[tool.ruff]
line-length = 92
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
exclude = ["django_google_sso/migrations"]

[tool.ruff.format]
exclude = ["django_google_sso/migrations"]

[tool.stela]
environment_variable_name = "STELA_ENV"
evaluate_data = true
show_logs = false
env_file = ".env"
config_file_path = "./example_google_app"
